--- a/.github/workflows/profile_stats_workflow.yml
+++ b/.github/workflows/profile_stats_workflow.yml
@@ -1,9 +1,14 @@
 name: Generate GitHub Stats
 
 on:
-  schedule: # Run workflow automatically
-    - cron: '0 0 * * *' # Runs every day at 12:00am
-  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   build:
